--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        <li>Oroszlán</li>
-        <li>Medve</li>
-        <li>Tigris</li>
+        <li>Galamb</li>
+        <li>Gólya</li>
+        <li>Rigó</li>
     </ul>
 </body>
 </html>
